[fix] button safari 이슈 해결 및 토스트 ui 예쁘게

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik:700&display=swap');
+
 :root {
     --button-color: whitesmoke;
     --button-hover-color: #d9d9d9;
@@ -30,44 +32,31 @@
 }
 
 .btn-3d {
-	color: var(--button-text-color);
 	width: 54px;
 	height: 54px;
 	position: relative;
 	margin: 0 8px;
 	background: var(--button-color);
-	border: 2px solid var(--button-border-color);
+	border: 1px solid var(--button-border-color);
 	border-radius: 4em;
+	color: var(--button-text-color);
 	cursor: pointer;
 	user-select: none;
 	transform-style: preserve-3d;
 	transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
 				background 150ms cubic-bezier(0, 0, 0.58, 1);
-}
-.btn-3d::before {
-  	position: absolute;
-	content: " ";
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background: var(--button-border-color);
-	border-radius: inherit;
-	box-shadow: 0 0 0 2px var(--button-border-color), 0 0.625em 0 0 var(--button-color);
-	transform: translate3d(0, 0.55em, -1em);
-	transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
-				box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+	box-shadow: 0 5px black;
 }
 
 .btn-3d.disabled {
 	cursor: default;
+	box-shadow: none;
 }
 
 .btn-3d.disabled:hover {
 	cursor: default;
 	transform: none;
+	box-shadow: none;
 }
 
 .btn-3d:hover {
@@ -75,28 +64,13 @@
 	transform: translate(0, 0.25em);
 }
 
-.btn-3d:hover::before {
-  	box-shadow: 0 0 0 2px var(--button-border-color), 0 0.5em 0 0 var(--button-color);
-	transform: translate3d(0, 0.5em, -1em);
-}
-
 .btn-3d:active {
   	background: var(--button-color);
+	box-shadow: none;
 	transform: translate(0em, 0.55em);
 }
 
-
 .btn-3d.disabled:active {
 	transform: none;
+	box-shadow: none;
 }
-
-.btn-3d.disabled:active::before {
-	box-shadow: 0 0 0 2px var(--button-border-color), 0 0.625em 0 0 var(--button-color);
-	transform: translate3d(0, 0.55em, -1em);
-}
-
-.btn-3d:active::before {
-  	box-shadow: 0 0 0 2px var(--button-color), 0 0 var(--button-border-color);
-	transform: translate3d(0, 0, -1em);
-}
-
