--- a/src/css/toast.css
+++ b/src/css/toast.css
@@ -1,7 +1,6 @@
 
-.toast-notification{
+.toast-notification {
   min-width: 150px;
-  height:50px;
   background-color:white;
   border-radius: 10px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -12,14 +11,12 @@
   position:fixed;
   z-index:1;
   display:flex;
-  flex-direction:row;
+  justify-content: center;
   font-size: 20px;
 }
 
 .message-container{
-  width:80%;
-  padding-top:13px;
-  padding-left: 30px;
-  font-family:'Roboto';
+  padding: 20px;
+  font-family: 'Arial';
   color:white;
 }
